--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -11,12 +11,17 @@
    background: white;
    /* border: 1px solid rgb(228, 228, 228); */
    width: 170px;
+   height: 170px;
    transition: .2s;
    padding: 10px;
    cursor: pointer;
    /* display: flex; */
 }
 
+.picture img {
+  width: 100%;
+  height: 100%;
+}
 .picture:hover {
    /* border: 1px double #DCDCDC; */
    /* box-shadow: 0 0 10px #CCCCDC; */
