--- a/public/css/src/thumbnail/thumbnail.css
+++ b/public/css/src/thumbnail/thumbnail.css
@@ -1,6 +1,7 @@
 .app-thumbnail {
     position: fixed;
     display: flex;
+    align-items: center;
     z-index: 1000;
     top: 10px;
     right: 22%;
@@ -17,20 +18,23 @@
     cursor: pointer;
 }
 
-.thumbnail__picture img {}
+.thumbnail__picture img {
+    width: 100%;
+    height: 100%;
+} 
 
 .thumbnail__name {
-    font: 20px 'alegreya sans';
-    font-weight: 600;
     color: white;
-    position: absolute;
-    top: 14px;
-    left: 76px;
     white-space: nowrap;
+    position: absolute;
+    left: 80px;
+    top: 10px;
+    font-family: 'creamy';
+    font-size: 30px;
 }
 
 @media (max-width: 500px) {
-    .app-thumbnail {
+    .thumbnail__picture {
         display: none;
     }
 }
