--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -7,7 +7,7 @@
   <title>Des rencontres avant d'aller en soirée </title>
 
   <meta charset="utf-8"> 
-  <meta name="viewport"           content="width=device-width, initial-scale=1">
+  <meta name="viewport"           content="width=device-width, initial-scale=1"> 
   <meta name="viewport"           content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <meta property="og:title" content="Des rencontres avant d'aller en soirée">
@@ -22,8 +22,6 @@
 
   <link rel="stylesheet" href="/fonts/creamy/creamy.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,100,300,700,800" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Assistant:200,300,400,600,700,800' rel='stylesheet' type='text/css'>
   
   <link rel="stylesheet" href="/css/lib/fontello/css/fontello.css">
   <link rel="stylesheet" href="/css/lib/flags/flags.css">
@@ -84,18 +82,8 @@
             </a>
           </li>
           <li class="app__menu-item --map" data-link="map">
-            <a href="#map">
+            <a href="#map"> 
               <i class="app__menu-icon icon icon-location"></i>
-            </a>
-          </li>
-          <li class="app__menu-item --notifications">
-            <a href="#notifications">
-              <i class="app__menu-icon icon icon-bell"></i>
-            </a>
-          </li>
-          <li class="app__menu-item --chats">
-            <a href="#chat">
-              <i class="app__menu-icon icon icon-chat-bubble-duo"></i>
             </a>
           </li>
           <li class="app__menu-item --search" data-link="search">
@@ -123,6 +111,20 @@
 
     <!-- Thumbnail start -->
     <section class="app-thumbnail">
+    <nav class="app-nav --thumbnail">
+        <ul>
+          <li class="app__menu-item --notifications">
+            <a href="#notifications">
+              <i class="app__menu-icon icon icon-bell"></i>
+            </a>
+          </li>
+          <li class="app__menu-item --chats">
+            <a href="#chat">
+              <i class="app__menu-icon icon icon-chat-bubble-duo"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
       <div class="thumbnail__picture --filterlayable">
         <img src="/img/bots/bot26f.jpg" width="45" alt="Just another bot">
       </div>
